--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -47,12 +47,12 @@
     .section-container {
       /* height: fit-content; */
     }
-/* 
+
     .section__pic-container img {
       width: 275px;
       height: 275px;
       margin: 0 auto 2rem;
-    } */
+    }
     .about-containers {
       margin-top: 0;
     }
