--- a/styles.css
+++ b/styles.css
@@ -330,7 +330,7 @@ nav img{
 }
 
 .hero-btns {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 
@@ -345,7 +345,7 @@ nav img{
 
 .hero-socials li a {
   font-size: 1.5rem;
-  color: #333;
+  color: var(--text-h3);
   transition: color 0.3s;
 }
 
@@ -354,7 +354,7 @@ nav img{
 }
 
 .hero-image {
-  margin-top: 1rem;
+  margin-top: 0.8rem;
 }
 
 .hero-image img {
@@ -365,7 +365,7 @@ nav img{
 
 /* Down Arrow */
 .hero-down-arrow {
-  margin-top: 2rem;
+  margin-top: 1rem;
   font-size: 1.25rem;
   animation: bounce 2s infinite;
 }
